--- a/tmux.conf
+++ b/tmux.conf
@@ -58,10 +58,9 @@ set -g window-status-current-format '#[fg=colour234,bg=colour39] #[fg=black,bg=c
 # Patch for OS X pbpaste and pbcopy under tmux.
 set-option -g default-command "reattach-to-user-namespace $SHELL --login"
 
-# Screen like binding
+# Set prefix to space
 unbind C-b
-set -g prefix C-a
-bind a send-prefix
+set -g prefix C-Space
 
 # force a reload of the config file
 unbind r
