--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 set -g bell-action any
 
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
-set -g default-terminal screen-256color
+set -g default-terminal "screen-256color"
 
 # Keep your finger on ctrl, or don't
 bind-key ^D detach-client
@@ -64,7 +64,12 @@ set -g prefix C-Space
 
 # force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.user ]" 'source ~/.tmux.conf.user'
+
+# Open personal todo list...
+bind-key t split-window -h "vim ~/todo.md"
+# open simplepractice wiki (prefix not working)
+# bind-key W split-window -h "vim ~/development/simplepractice/simplepractice.wiki/ +GFiles"
