--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # Use zsh
-set-option -g default-shell /bin/zsh
+# set-option -g default-shell /bin/zsh
 # Ring the bell if any background window rang a bell
 set -g bell-action any
 
@@ -56,7 +56,7 @@ set-option -g base-index 1
 set-option -g history-limit 100000
 
 # Patch for OS X pbpaste and pbcopy under tmux.
-set-option -g default-command "reattach-to-user-namespace $SHELL --login"
+# set-option -g default-command "reattach-to-user-namespace $SHELL --login"
 
 # Set prefix to space
 unbind C-b
