--- a/tmux.conf
+++ b/tmux.conf
@@ -56,7 +56,7 @@ set-option -g base-index 1
 set-option -g history-limit 100000
 
 # Patch for OS X pbpaste and pbcopy under tmux.
-# set-option -g default-command "reattach-to-user-namespace $SHELL --login"
+set-option -g default-command "reattach-to-user-namespace $SHELL --login"
 
 # force a reload of the config file
 unbind r
