--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,3 @@
-# Use zsh
-set-option -g default-shell /bin/zsh
-# Ring the bell if any background window rang a bell
-set -g bell-action any
-
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 # set -g default-terminal "screen-256color"
 
@@ -30,18 +25,6 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-# bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-# bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-# bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-# bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-# bind-key -T copy-mode-vi C-h select-pane -L
-# bind-key -T copy-mode-vi C-j select-pane -D
-# bind-key -T copy-mode-vi C-k select-pane -U
-# bind-key -T copy-mode-vi C-l select-pane -R
-# bind-key -T copy-mode-vi C-\ select-pane -l
 
 # Use vi keybindings for tmux commandline input.
 # Note that to get command mode you need to hit ESC twice...
@@ -49,18 +32,6 @@ set -g status-keys vi
 
 # Use vi keybindings in copy and choice modes
 setw -g mode-keys vi
-
-set-window-option -g mouse on
-
-set-option -g base-index 1
-set-option -g history-limit 100000
-
-# Patch for OS X pbpaste and pbcopy under tmux.
-set-option -g default-command "reattach-to-user-namespace $SHELL --login"
-
-# Set prefix to space
-unbind C-b
-set -g prefix C-Space
 
 # force a reload of the config file
 unbind r
@@ -71,56 +42,51 @@ if-shell "[ -f ~/.tmux.conf.user ]" 'source ~/.tmux.conf.user'
 
 # Open personal todo list...
 bind-key t split-window -h "vim ~/todo.md"
-# open simplepractice wiki (prefix not working)
-# bind-key W split-window -h "vim ~/development/simplepractice/simplepractice.wiki/ +GFiles"
 
-
-
-## COLORSCHEME: gruvbox dark
-set-option -g status "on"
-
+# ## COLORSCHEME: gruvbox dark
+# set-option -g status "on"
+# 
 # default statusbar color
 set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
-
-# default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
-
-# default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
-
-# active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
-
-# pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
-set-option -g pane-border-style fg=colour237 #bg1
-
+# 
+# # default window title colors
+# set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+# 
+# # default window with an activity alert
+# set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+# 
+# # active window title colors
+# set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+# 
+# # pane border
+# set-option -g pane-active-border-style fg=colour250 #fg2
+# set-option -g pane-border-style fg=colour237 #bg1
+# 
 # message infos
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
-
-# writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
-
-# pane number display
+# set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+# 
+# # writing commands inactive
+# set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+# 
+# # pane number display
 set-option -g display-panes-active-colour colour250 #fg2
 set-option -g display-panes-colour colour237 #bg1
-
-# clock
-set-window-option -g clock-mode-colour colour109 #blue
-
-# bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
-
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
+# 
+# # clock
+# set-window-option -g clock-mode-colour colour109 #blue
+# 
+# # bell
+# set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+# 
+# ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status-justify "left"
 set-option -g status-left-style none
 set-option -g status-left-length "80"
 set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
-
+# 
 set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore] "
 set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics] #[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore] #[fg=colour237, bg=colour248] #h "
-
 set-window-option -g window-status-current-format "#[fg=colour237, bg=colour214, nobold, noitalics, nounderscore] #[fg=colour239, bg=colour214] #I  #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore] "
 set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics] #[fg=colour223,bg=colour239] #I  #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics] "
