--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,9 @@
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 # set -g default-terminal "screen-256color"
 
+# fix gpg decrypt in tmux
+set-option -g update-environment 'DBUS_SESSION_BUS_ADDRESS'
+
 # Keep your finger on ctrl, or don't
 bind-key ^D detach-client
 
